(fix) remove emoji-picker extra scrollbar

--- a/src/components/EmojiPickerContainer/EmojiPickerContainer.scss
+++ b/src/components/EmojiPickerContainer/EmojiPickerContainer.scss
@@ -20,6 +20,11 @@
 		background: var(--chat-emoji-bg-color);
 		box-shadow: 0 1px 2px -2px rgba(0, 0, 0, 0.1),
 			0 1px 2px -1px rgba(0, 0, 0, 0.1), 0 1px 2px 1px rgba(0, 0, 0, 0.1);
+		scrollbar-width: none;
+
+		&::-webkit-scrollbar {
+			display: none;
+		}
 
 		&.vac-picker-reaction {
 			position: fixed;
